# weir-proxy

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  RELEASING.md  weir.example.toml
docs/superpowers/plans/: 2026-07-10-weir-circuit-breaker.md  2026-07-13-weir-events-generation.md
docs/superpowers/specs/: 2026-07-10-weir-circuit-breaker-design.md
src/: enforcer.rs  error.rs  gateway.rs  lib.rs  main.rs  telemetry.rs
src/budget/: mod.rs  sliding_window.rs
src/provider/: anthropic.rs  mod.rs  openai.rs
tests/: budget_concurrency_test.rs  proxy_flow_test.rs
tests/fixtures/: anthropic_stream.sse  openai_stream.sse
