[package]
name = "weir"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "weir"
path = "src/main.rs"

[lib]
name = "weir"
path = "src/lib.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1"
dashmap = "6"
arc-swap = "1"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tiktoken-rs = "0.6"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
